syntax = "proto3";

package boop;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "boop.events";

message BoopEvent {
    google.protobuf.Timestamp date_sent = 1;
    BoopUser user = 2;
}

message BoopUser {
    string name = 1;
}
